Edit SaveTodoCommand in UserGuide (#175)
* Fix bug for Save Command Ui

* Add restriction for review command

* Change url of help window to EatMe UserGuide

* Update user guide

* Update user guide

* Increase depth of content page

* Edit SaveTodoCommand section

* Update SaveTodo section in User guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -272,11 +272,23 @@ Examples:
 ==== Saving a todo eatery to the main eatery list : `save`
 
 Remove a todo eatery from the todo list and provides a quick way to add it to the main list of eateries. +
-Format: `save [id]` (saves the eatery to the main list)
+
+Format: `save [index]`
+
+****
+* Save the eatery at the specified index. The index refers to the index number shown in the displayed todo list.
+* The index *must be a positive integer* 1, 2, 3, ...
+* The eatery will be removed from the todo list after `save` is executed
+* User will be required to input the missing field before the eatery is saved in the main list.
+****
 
 Examples:
 
 * `save 2`
+** Save the second eatery in the todo list
+** The eatery is removed from the todo list
+** Application will toggle to Main
+** `add` command will be constructed, allowing user to just input missing fields.
 
 ==== Finding an eatery: `find`
 
