--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -149,12 +149,13 @@ image::mainInterface.png[Main interface,width=800]
 
 === Going to another page: ``goto``
 
-Trying to open up the achievements page? Use this command!
+Trying to open up the _itinerary page_? Use this command!
 
 *Format:* +
 ``goto PAGE TYPE`` +
 {empty} + 
-Note that the only available ``PAGE TYPE``s are ``calendar``, ``itinerary``, ``address_book``, ``financial_tracker``, ``diary`` and ``achievements``.
+
+WARNING: The only available ``PAGE TYPE``s are ``calendar``, ``itinerary``, ``address_book``, ``financial_tracker``, ``diary`` and ``achievements``.
 
 *Example:* 
 
@@ -174,9 +175,7 @@ image::mainGoto2.png[Goto result]
 
 If you are lost, this command will be helpful.
 
-*Format:* + 
-
-``help``
+*Format:* + ``help``
 
 *Step by step:*
 
