--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -1165,100 +1165,224 @@ Trying to journal about your fishing trip? The Diary allows you to add entries a
 Format: `add t/TITLE d/DATE TIME [p/PLACE] [m/MEMORY]`
 
 
-| 💡
-| Note that ``PLACE`` and ``MEMORY`` are optional
-|
-
-
-| ⚠️
-| A warning sign indicates that enclosed text is important.
-
-
-
 Example: Lets take the example of our midnight fishing trip!
 
 Step 1: Enter ``add t/Fishing Trip d/12/12/2019 2300 p/Pulau Tekong m/Caught the biggest fish ever!``
 
 image::DiaryAddBefore.png[]
 
+Step 2: TravEzy will tell you if your `add` command was successful in the _Result Display_
+
+Step 3: You can see you added entry in the _Diary List_
+
+
+image::DiaryAddAfter.png[]
 
 
 
-=== Delete Command
+=== Deleting diary entries from your diary ``delete``
 
-For some memories, it's best to forget them :(
+For some memories, it's best to forget them ☹. The Diary can help you to get rid of unpleasant diary entries.
 
-
-*Delete an entry from your diary: ``delete``*
-
-Deletes an entry from your diary with the only parameter being the index of the entry you want to
-delete. The index must be an integer which is more than or equal to 1 and corresponds to ID of the
-entry you want to delete
-
-The _Command Word_ is ``delete`` and the only parameter is the index.
-
-Format: ``delete index``
+Format: ``delete INDEX``
 
 Example: I lost my wallet at the amusement park in Genting, I don't want to remember
 that trip ever again :(
 
-``delete 5``
+Step 1: Enter ``delete 2``
 
 
-=== List Command
+image::DiaryDeleteBefore.png[]
 
-What if you want to see all your memories in _ONE_, _CONTINUOUS_ list? Just type *List!*
+Step 2: TravEzy will tell you if your `delete` command was successful in the _Result Display_
+
+Step 3: You can see your updated _Diary List_ without the horrible memory
 
 
-*List all entries: ``list``*
+image::DiaryDeleteAfter.png[]
 
-Lists all entries in your diary. There are no parameters.
 
-The _Command Word_ is ``list``.
+
+
+=== List all your diary entries ``list``
+
+What if you want to see all your memories in _ONE_, _CONTINUOUS_ list? The Diary allows you to see everything in on, convenient list!
 
 Format: ``list``
 
 Example: I want to relive *EVERYTHING*
 
-``list``
+Step 1: Enter ``list``
 
-=== Find Command
+
+image::DiaryListBefore.png[]
+
+Step 2: TravEzy will tell you if your `list` command was successful in the _Result Display_
+
+Step 3: You can see all your entries in the _Diary List_
+
+
+image::DiaryListAfter.png[]
+
+=== Find diary entries ``find``
 
 "Hey, when did I go to Spain?" It can be hard to remember
-all the details of your trips. That's why, this Diary allows you to *Find*
+all the details of your trips. That's why, this Diary allows you to look through all your entries to find the ones you want!
+
+Format: ``find TARGET``
+
+Example: I want to see what I wrote about the Rugby World Cup
 
 
-*Find entries containing a certain text: ``find``*
-
-Finds all entries which contain your input text. There is one parameter, which
-is the text that you want to find.
-
-The _Command Word_ is ``find``.
-
-Format: ``list input``
-
-Example: I want to find about my trip on 12/12/2019
-
-``find 12/12/2019``
+Step 1: Enter ``find rugby``
 
 
-=== Find Specific Command
+image::DiaryFindBefore.png[]
 
-Let's narrow down your search!
+Step 2: TravEzy will tell you if your `find` command was successful in the _Result Display_
+
+Step 3: You can see the matching entries in your _Diary List_
 
 
-*Find entries containing a certain text in a specific field : ``findSpecific``*
 
-Finds all entries which contain your input text, in the highlighted field. There is one parameter, which
-is the text that you want to find, with the relevant _PREFIX_.
+image::DiaryFindAfter.png[]
 
-The _Command Word_ is ``findSpecific``.
 
-Format: ``list input``
 
-Example: I want to find about my trip on 12/12/2019
+=== Find specific diary entries ``findSpecific``
 
-``find 12/12/2019``
+Let's narrow down your search! The diary allows you to look through specific sections of each entry to find the exact entry that you want!
+
+
+Format: ``findSpecific [t/TITLE] [d/DATE TIME] [p/PLACE] [m/MEMORY]``
+
+Example: I know that I had a trip on the 12th of December 2019, but I cant remember what I did...
+
+
+Step 1: Enter ``findSpecific d/12/12/2019``
+
+
+
+image::DiaryFindSpecificBefore.png[]
+
+Step 2: TravEzy will tell you if your `findSpecific` command was successful in the _Result Display_
+
+Step 3: You can see the specific matching entries in your _Diary List_
+
+
+
+image::DiaryFindSpecificAfter.png[]
+
+
+=== Private personal memories ``private``
+
+There are some personal memories which are for our eyes only. The Diary can help you to private memories from prying eyes.
+
+Format: ``private INDEX``
+
+Example: I had my first sip of wine today at the restaurant! I don't want my mum to find out...
+
+Step 1: Enter ``private  4``
+
+
+image::DiaryPrivateBefore.png[]
+
+Step 2: TravEzy will tell you if your `private` command was successful in the _Result Display_
+
+Step 3: You can see your updated _Diary List_, after the memory has been hidden
+
+
+
+image::DiaryPrivateAfter.png[]
+
+
+=== Unprivate personal memories ``unprivate``
+
+Once you know you are alone and away from prying eyes, you can look at your private memories safely. The Diary can help you to unprivate those memories.
+
+Format: ``unprivate INDEX``
+
+Example: Ok!, I'm alone and I want to look at my private memories
+
+Step 1: Enter ``unprivate 4``
+
+
+
+image::DiaryUnPrivateBefore.png[]
+
+Step 2: TravEzy will tell you if your `unprivate` command was successful in the _Result Display_
+
+Step 3: You can see your updated _Diary List_, after the memory is visible again
+
+
+image::DiaryUnPrivateAfter.png[]
+
+
+=== Keep your diary protected ``setDetails``
+
+You never know who may use your laptop when you're away. The Diary can help you to password protect your memories to stop hackers from looking at your private memories.
+If you ``setDetails``, you will not be able to use the ``unprivate`` command and will have to use the ``unlock`` command (See below)
+
+Format: ``setDetails user/USERNAME password/PASSWORD``
+
+Example: Better set a password to protect my memories against prying eyes
+
+Step 1: Enter ``setDetails user/youcanthackme password/youreallycanthackme``
+
+
+
+image::DiarySetDetailsBefore.png[]
+
+
+Step 2: TravEzy will tell you if your `unprivate` command was successful in the _Result Display_
+
+
+
+image::DiarySetDetailsAfter.png[]
+
+
+Step 1: Lets say someone tries to hack you
+
+image::DiarySetDetailsHack.png[]
+
+Step 1: TravEzy will protect you if someone else tries to change your details
+
+
+image::DiarySetDetailsHackFail.png[]
+
+
+
+=== Unlock your private diary entries ``unlock``
+
+With password protection, we want to ensure no one else can access our memories . The Diary can do this by ensuring only you can see the private memories.
+
+Format: ``unlock INDEX user/USERNAME password/PASSWORD``
+
+Example: Time to look at all my private memories
+
+Step 1: Enter ``unlock 4 user/youcanthackme password/youreallycanthackme``
+
+
+
+image::DiaryUnLockBefore.png[]
+
+
+Step 2: TravEzy will tell you if your `unlock` command was successful in the _Result Display_
+
+
+
+image::DiaryUnLockAfter.png[]
+
+
+Step 1: Lets say someone tries to hack you
+
+image::DiaryUnLockHackBefore.png[]
+
+Step 1: TravEzy will protect you if someone else tries to change your details
+
+
+image::DiaryUnLockHackAfter.png[]
+
 
 
 == Achievements
